tests/ui/impl-trait/rpit/const_check_false_cycle.current.stderr
error[E0391]: cycle detected when computing type of opaque `f::{opaque#0}`
  --> $DIR/const_check_false_cycle.rs:9:17
   |
LL | const fn f() -> impl Eq {
   |                 ^^^^^^^
   |
note: ...which requires borrow-checking `f`...
  --> $DIR/const_check_false_cycle.rs:9:1
   |
LL | const fn f() -> impl Eq {
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires promoting constants in MIR for `f`...
  --> $DIR/const_check_false_cycle.rs:9:1
   |
LL | const fn f() -> impl Eq {
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const checking `f`...
  --> $DIR/const_check_false_cycle.rs:9:1
   |
LL | const fn f() -> impl Eq {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which requires computing whether `f::{opaque#0}` is freeze...
   = note: ...which requires evaluating trait selection obligation `f::{opaque#0}: core::marker::Freeze`...
   = note: ...which again requires computing type of opaque `f::{opaque#0}`, completing the cycle
note: cycle used when computing type of `f::{opaque#0}`
  --> $DIR/const_check_false_cycle.rs:9:17
   |
LL | const fn f() -> impl Eq {
   |                 ^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
